worked on blackjack and changed hit or stay for my logic

--- a/HitOrStay/HitOrStay/MainWindow.xaml
+++ b/HitOrStay/HitOrStay/MainWindow.xaml
@@ -7,7 +7,67 @@
         mc:Ignorable="d"
         Title="Hit Or Stay for Blackjack" Height="350" Width="525">
     <Grid>
-        <Grid> 
+        <Grid>
+            <Label x:Name="dealer1"
+               Background="LightBlue"
+               Margin="28,23,428,209.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="1"/>
+            <Label x:Name="dealer2"
+               Background="LightBlue"
+               Margin="123,23,333,209.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="2"/>
+            <Label x:Name="dealer3"
+               Background="LightBlue"
+               Margin="231,23,225,209.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="3"/>
+            <Label x:Name="dealer4"
+               Background="LightBlue"
+               Margin="334,23,122,209.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="4"/>
+            <Label x:Name="dealer5"
+               Background="LightBlue"
+               Margin="428,23,28,209.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="5"/>
+            <Label x:Name="player1"
+               Background="LightBlue"
+               Margin="28,222,428,10.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="1"/>
+            <Label x:Name="player2"
+               Background="LightBlue"
+               Margin="123,222,333,10.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="2"/>
+            <Label x:Name="player3"
+               Background="LightBlue"
+               Margin="231,222,225,10.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="3"/>
+            <Label x:Name="player4"
+               Background="LightBlue"
+               Margin="334,222,122,10.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="4"/>
+            <Label x:Name="player5"
+               Background="LightBlue"
+               Margin="428,222,28,10.5"
+               FontSize="24"
+               HorizontalContentAlignment="Center"
+               Content="5"/>
             <Button Content="Hit"
                 HorizontalAlignment="Left"
                 Margin="100,10,0,0"
